feature: add chunking API (#32)
* feature: add chunking API endpoint
* small refactoring
* update API docs


---------
